Complete mongoTemplate configuration